<resources>
    <string name="app_name">Kurtin</string>
    <!--<string name="app_name">Travel Guide</string>-->
    <string name="kurtin_app_name">Kurtin</string>
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="action_login">Login</string>-->
    <!--<string name="action_profile">Profile</string>-->
    <string name="action_done">Done</string>
    <string name="label_login_with_facebook">Login with Facebook</string>
    <string name="place">Place</string>
    <string name="label_logout">Logout</string>
    <string name="new_trip">New Trip</string>
    <string name="hint_destination">Destination</string>
    <string name="hint_plan_name">Name</string>
    <string name="label_Start_Date">Date</string>
    <string name="label_End_Date">Date</string>
    <string name="label_save">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_place_name">Name</string>
    <string name="hint_travel_time">Time spent</string>
    <string name="plan_name_is_required">Plan name is required!</string>
    <string name="destination_is_required">Destination is required!</string>
    <string name="plan_start_date_is_required">Plan start date is required!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="couple">Couple</string>
    <string name="family">Family</string>
    <string name="group">Group</string>
    <string name="creating_plan">Creating Plan…</string>
    <string name="loading_plans">Kurtin is hunting…</string>
    <string name="please_wait">Please wait.</string>
    <string name="no_data_available">No data available.</string>
    <string name="label_settings">Select filters</string>
    <string name="label_group_type">Group</string>
    <string name="label_season">Season</string>
    <string name="label_save_button">Save</string>
    <string name="label_cancel_button">@android:string/cancel</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add_new_place">Add New Place</string>
    <string name="add_new_day">Add New Day</string>
    <string name="login_header">Log in and start customizing your trips for the best experience!</string>
    <string name="termsAndPrivacy">By logging in you agree to the TravelGuide Terms of Service and Privacy Policy.</string>
    <string name="log_in_facebook">Log In With Facebook</string>
    <string name="logging_in">Logging in…</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="single">Single</string>
    <string name="selectHunt">Select a hunt...</string>
    <string name="emptyLeaderBoard">No Leader yet for this hunt</string>
    <string name="emptySelectionLB">Select a hunt to see Leaders</string>
    <string name="emptyLeaderBoardOverall">No Leaders identified yet</string>


    <string name="full_screen">Full Screen</string>
    <string name="small_screen">Small Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="scan">scan</string>

    <string name="hunt_code_prompt">enter your special hunt code</string>
    <string name="hunt_code">HUNT CODE</string>


    <!--******************-->
    <!--Cvar added strings-->
    <!--******************-->

    <!--Nav menu strings-->
    <string name="action_login">LOGIN</string>
    <string name="action_home">HOME</string>
    <string name="action_my_hunts">MY HUNTS</string>
    <string name="action_favorites">FAVORITES</string>
    <string name="action_leaders">LEADERS</string>
    <string name="action_private">PRIVATE</string>
    <string name="action_invite_friends">INVITE FRIENDS</string>
    <string name="action_profile">PROFILE</string>
    <string name="action_logout">LOGOUT</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_experimental">EXPERIMENTAL</string>

    <!--Login and Signup Strings-->
    <string name="login_instruction_one">Login Using</string>
    <string name="login_instruction_two">Or</string>
    <string name="kurtin_login_text">Email</string>
    <string name="username_hint">USERNAME</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="kurtin_signup_text">Or Sign Up Now</string>
    <string name="sign_up_instruction_one">Sign Up Using</string>
    <string name="sign_up_instruction_two">SIGN UP WITH KURTIN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="finish_login">Finish</string>


    <!--Other Strings-->
    <string name="scan_motto">PULL THE KURTIN</string>
    <string name="scan_instructions">Find and scan this image:</string>
    <string name="leader_boards">leader boards</string>
    <string name="change_profile_pic">Change Profile Pic</string>

    <!--Completion Screen-->
    <string name="congrats">CONGRATS</string>
    <string name="hunt_complete">Hunt Complete</string>
    <string name="points_earned">Points Earned:</string>
    <string name="next_hunt">NEXT HUNT</string>

    <!--Button Text-->
    <string name="yes">yes</string>
    <string name="no">no</string>


</resources>
