<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinnerHunts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectHunt"
        android:text="[Select a Planet...]"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTripPlansInProfile"
        android:layout_below="@+id/spinnerHunts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tvEmptyInProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/emptySelectionLB"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvEmptyLeaderBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/emptyLeaderBoard"
        android:visibility="gone" />
</RelativeLayout>
