<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/tvPlanName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_plan_name"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/actvPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvPlanName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tvPlanName"
        android:layout_below="@+id/tvPlanName"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_destination"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actvPlaceName"
        android:layout_marginTop="20dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvStartDate"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvStart"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/label_Start_Date"
        android:minWidth="160dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/tvStartTime"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvStartDate"
        android:layout_toEndOf="@+id/tvStartDate"
        android:layout_toRightOf="@+id/tvStartDate"
        android:hint="@string/time"
        android:minWidth="100dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStartDate"
        android:layout_marginTop="16dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEndDate"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEnd"
        android:layout_alignStart="@+id/tvEnd"
        android:layout_below="@+id/tvEnd"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/label_End_Date"
        android:minWidth="160dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/tvEndTime"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvEndDate"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@+id/tvEndDate"
        android:layout_toRightOf="@+id/tvEndDate"
        android:hint="@string/time"
        android:minWidth="100dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvEndDate"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/type"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rgGroupType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvType">

        <RadioButton
            android:id="@+id/rbSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/single"
            android:drawablePadding="14dp"
            android:drawableStart="@drawable/single"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/single"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rbCouple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/couple"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/couple"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/couple"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rbFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/family"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/family"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/family"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

</RelativeLayout>
