<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.travelguide.fragments.LoginFragment">

    <TextView
        android:id="@+id/tvAppName"
        fontPath="fonts/mistral.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login_header"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/blue"
            android:drawableLeft="@drawable/fb_logo"
            android:drawablePadding="-15dp"
            android:drawableStart="@drawable/fb_logo"
            android:gravity="center"
            android:text="@string/log_in_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTermsAndPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/termsAndPrivacy"
        android:textColor="@color/secondary_text"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCoverPic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/primary"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/primary"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>
